tests/node_tests/node_tests.exp
child_process/execSync.js:8
  8: (execSync('ls', {timeout: '250'})); // error, no signatures match
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function call. Function cannot be called on any member of intersection type
  8: (execSync('ls', {timeout: '250'})); // error, no signatures match
      ^^^^^^^^ intersection
  Member 1:
  function type. See lib: node.js:220
  Error:
  property `encoding`. Property not found in. See lib: node.js:222
    8: (execSync('ls', {timeout: '250'})); // error, no signatures match
                       ^^^^^^^^^^^^^^^^ object literal
  Member 2:
  function type. See lib: node.js:225
  Error:
    8: (execSync('ls', {timeout: '250'})); // error, no signatures match
                                 ^^^^^ string. This type is incompatible with
  number. See lib: node.js:149

crypto/crypto.js:12
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
            ^^^^^^^^^^^ call of method `read`
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
            ^^^^^^^^^^^ Buffer. This type is incompatible with
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
                         ^^^^^^ number

crypto/crypto.js:12
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
            ^^^^^^^^^^^ call of method `read`
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
            ^^^^^^^^^^^ null. This type is incompatible with
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
                         ^^^^^^ number

crypto/crypto.js:12
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
            ^^^^^^^^^^^ call of method `read`
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
            ^^^^^^^^^^^ string. This type is incompatible with
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
                         ^^^^^^ number

crypto/crypto.js:12
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
            ^^^^^^^^^^^ call of method `read`
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
            ^^^^^^^^^^^ undefined. This type is incompatible with
 12:       (hmac.read(): number); // 4 errors: null, void, string, Buffer
                         ^^^^^^ number

crypto/crypto.js:16
 16:     hmac.write(123); // 2 errors: not a string or a Buffer
         ^^^^^^^^^^^^^^^ call of method `write`
 16:     hmac.write(123); // 2 errors: not a string or a Buffer
                    ^^^ number. This type is incompatible with
union: Buffer | string. See lib: node.js:1158
  Member 1:
  Buffer. See lib: node.js:1158
  Error:
   16:     hmac.write(123); // 2 errors: not a string or a Buffer
                      ^^^ number. This type is incompatible with
  Buffer. See lib: node.js:1158
  Member 2:
  string. See lib: node.js:1158
  Error:
   16:     hmac.write(123); // 2 errors: not a string or a Buffer
                      ^^^ number. This type is incompatible with
  string. See lib: node.js:1158

crypto/crypto.js:26
 26:     hmac.update('foo', 'bogus'); // 1 error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `update`. Function cannot be called on any member of intersection type
 26:     hmac.update('foo', 'bogus'); // 1 error
         ^^^^^^^^^^^ intersection
  Member 1:
  function type. See lib: node.js:379
  Error:
   26:     hmac.update('foo', 'bogus'); // 1 error
                       ^^^^^ string. This type is incompatible with
  Buffer. See lib: node.js:379
  Member 2:
  function type. See lib: node.js:380
  Error:
   26:     hmac.update('foo', 'bogus'); // 1 error
                              ^^^^^^^ string. This type is incompatible with
  string enum. See lib: node.js:380

crypto/crypto.js:28
 28:     hmac.update(buf, 'utf8'); // 1 error: no encoding when passing a buffer
         ^^^^^^^^^^^^^^^^^^^^^^^^ call of method `update`. Function cannot be called on any member of intersection type
 28:     hmac.update(buf, 'utf8'); // 1 error: no encoding when passing a buffer
         ^^^^^^^^^^^ intersection
  Member 1:
  function type. See lib: node.js:379
  Error:
   28:     hmac.update(buf, 'utf8'); // 1 error: no encoding when passing a buffer
                            ^^^^^^ string. This type is incompatible with
  undefined. See lib: node.js:379
  Member 2:
  function type. See lib: node.js:380
  Error:
   21:   function(buf: Buffer) {
                       ^^^^^^ Buffer. This type is incompatible with
  string. See lib: node.js:380

crypto/crypto.js:35
 35:     (hmac.digest('hex'): void); // 1 error
          ^^^^^^^^^^^^^^^^^^ call of method `digest`
 35:     (hmac.digest('hex'): void); // 1 error
          ^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
 35:     (hmac.digest('hex'): void); // 1 error
                              ^^^^ undefined

crypto/crypto.js:36
 36:     (hmac.digest(): void); // 1 error
          ^^^^^^^^^^^^^ call of method `digest`
 36:     (hmac.digest(): void); // 1 error
          ^^^^^^^^^^^^^ Buffer. This type is incompatible with
 36:     (hmac.digest(): void); // 1 error
                         ^^^^ undefined

fs/fs.js:13
 13: fs.readFile("file.exp", { encoding: "blah" }, (_, data) => {
     ^ call of method `readFile`. Could not decide which case to select
intersection type. See lib: node.js:732
  Case 3 may work:
  function type. See lib: node.js:741
  But if it doesn't, case 4 looks promising too:
  function type. See lib: node.js:746
  Please provide additional annotation(s) to determine whether case 3 works (or consider merging it with case 4):
   13: fs.readFile("file.exp", { encoding: "blah" }, (_, data) => {
                                                      ^ parameter `_`
   13: fs.readFile("file.exp", { encoding: "blah" }, (_, data) => {
                                                         ^^^^ parameter `data`

fs/fs.js:24
 24: (fs.readFileSync("file.exp") : string); // error
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Buffer. This type is incompatible with
 24: (fs.readFileSync("file.exp") : string); // error
                                    ^^^^^^ string

fs/fs.js:27
 27: (fs.readFileSync("file.exp", "blah") : Buffer); // error
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
 27: (fs.readFileSync("file.exp", "blah") : Buffer); // error
                                            ^^^^^^ Buffer

fs/fs.js:30
 30: (fs.readFileSync("file.exp", { encoding: "blah" }) : Buffer); // error
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
 30: (fs.readFileSync("file.exp", { encoding: "blah" }) : Buffer); // error
                                                          ^^^^^^ Buffer

fs/fs.js:33
 33: (fs.readFileSync("file.exp", {}) : string); // error
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Buffer. This type is incompatible with
 33: (fs.readFileSync("file.exp", {}) : string); // error
                                        ^^^^^^ string

invalid_package_file/package.json:1
  1: 
     ^ Unexpected end of input

json_file/json_invalid.json:1
  1: :derp
     ^ Unexpected token :

json_file/test.js:4
  4: (data.foo: void); // error, should be object literal
      ^^^^^^^^ object literal. This type is incompatible with
  4: (data.foo: void); // error, should be object literal
                ^^^^ undefined

json_file/test.js:5
  5: (data.foo.bar: void); // error, should be boolean
      ^^^^^^^^^^^^ boolean. This type is incompatible with
  5: (data.foo.bar: void); // error, should be boolean
                    ^^^^ undefined

json_file/test.js:6
  6: (data.abc: boolean); // error, should be ?string
      ^^^^^^^^ null. This type is incompatible with
  6: (data.abc: boolean); // error, should be ?string
                ^^^^^^^ boolean

json_file/test.js:6
  6: (data.abc: boolean); // error, should be ?string
      ^^^^^^^^ string. This type is incompatible with
  6: (data.abc: boolean); // error, should be ?string
                ^^^^^^^ boolean

json_file/test.js:6
  6: (data.abc: boolean); // error, should be ?string
      ^^^^^^^^ undefined. This type is incompatible with
  6: (data.abc: boolean); // error, should be ?string
                ^^^^^^^ boolean

json_file/test.js:9
  9: (data2.baz: void); // error, should be string
      ^^^^^^^^^ string. This type is incompatible with
  9: (data2.baz: void); // error, should be string
                 ^^^^ undefined

json_file/test.js:12
 12: (data3.foo: void); // error, should be number (not string! index.js wins)
      ^^^^^^^^^ number. This type is incompatible with
 12: (data3.foo: void); // error, should be number (not string! index.js wins)
                 ^^^^ undefined

json_file/test.js:16
 16: (data4: void); // error, should be Array<number>
      ^^^^^ array literal. This type is incompatible with
 16: (data4: void); // error, should be Array<number>
             ^^^^ undefined

json_file/test.js:18
 18: (require('./json_string'): void); // error, should be string
      ^^^^^^^^^^^^^^^^^^^^^^^^ string. This type is incompatible with
 18: (require('./json_string'): void); // error, should be string
                                ^^^^ undefined

json_file/test.js:19
 19: (require('./json_number'): void); // error, should be number
      ^^^^^^^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 19: (require('./json_number'): void); // error, should be number
                                ^^^^ undefined

json_file/test.js:20
 20: (require('./json_true'): void); // error, should be true
      ^^^^^^^^^^^^^^^^^^^^^^ boolean. This type is incompatible with
 20: (require('./json_true'): void); // error, should be true
                              ^^^^ undefined

json_file/test.js:21
 21: (require('./json_false'): void); // error, should be false
      ^^^^^^^^^^^^^^^^^^^^^^^ boolean. This type is incompatible with
 21: (require('./json_false'): void); // error, should be false
                               ^^^^ undefined

json_file/test.js:22
 22: (require('./json_null'): void); // error, should be null
      ^^^^^^^^^^^^^^^^^^^^^^ null. This type is incompatible with
 22: (require('./json_null'): void); // error, should be null
                              ^^^^ undefined


Found 30 errors
